force-app/main/default/objects/CAPA_c__c/CAPA_c__c.object-meta.xml
<CustomObject>
    <description>Corrective Action Report</description>
    <label>CAPA__c</label>
    <nameField>
        <label>CAPA__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAPAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>