force-app/main/default/objects/CAPA_c__c/fields/Closed_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_c__c</fullName>
    <label>Closed_Date__c</label>
    <type>Date</type>
</CustomField>