force-app/main/default/objects/CAPA_c__c/fields/Corrective_Action_c__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_c__c</fullName>
    <label>Corrective_Action__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>