force-app/main/default/objects/CAPA_c__c/fields/Non_Conformance__c.field-meta.xml
<CustomField>
    <fullName>Non_Conformance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Conformance</label>
    <referenceTo>Non_Conformance__c</referenceTo>
    <relationshipLabel>CAPAs</relationshipLabel>
    <relationshipName>CAPAs</relationshipName>
    <type>Lookup</type>
</CustomField>