force-app/main/default/objects/CAPA_c__c/fields/Preventive_Action_c__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Action_c__c</fullName>
    <label>Preventive_Action__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>