force-app/main/default/objects/CAPA_c__c/fields/Root_Cause_c__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_c__c</fullName>
    <label>Root_Cause__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>